{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 57,
  "lineage": "b77380f5-551a-8927-895c-0577ce7748c2",
  "resources": [
    {
      "module": "module.Bastion_EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07814f2a622004ee6",
            "arn": "arn:aws:ec2:eu-west-2:922713472255:instance/i-0a4556ccc267badaa",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4556ccc267badaa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04511baddcb82bcb5",
            "private_dns": "ip-172-31-29-175.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.29.175",
            "public_dns": "ec2-18-171-169-214.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.171.169.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0812af4134f4382fb",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Bastion-SG-20250225005611991100000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07cfcb9d4e98e4da5",
            "tags": {
              "Name": "Bastion",
              "Owner": "Dominik"
            },
            "tags_all": {
              "Name": "Bastion",
              "Owner": "Dominik"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "Bastion-Instance"
            },
            "vpc_security_group_ids": [
              "sg-05120ac4b3433dc36"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ami.ec2linux",
            "module.Bastion_EC2.aws_iam_instance_profile.this",
            "module.Bastion_EC2.aws_iam_role.this",
            "module.Bastion_EC2.data.aws_iam_policy_document.assume_role_policy",
            "module.Bastion_EC2.data.aws_partition.current",
            "module.Bastion_EC2.data.aws_ssm_parameter.this",
            "module.Bastion_SG.aws_security_group.this",
            "module.Bastion_SG.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.Bastion_SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:922713472255:security-group/sg-05120ac4b3433dc36",
            "description": "Security Group managed by Terraform",
            "egress": [],
            "id": "sg-05120ac4b3433dc36",
            "ingress": [],
            "name": "Bastion-SG-20250225005611991100000001",
            "name_prefix": "Bastion-SG-",
            "owner_id": "922713472255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion",
              "Owner": "Dominik"
            },
            "tags_all": {
              "Name": "Bastion",
              "Owner": "Dominik"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f234251f74859f26"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Bastion_SG",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2882993581",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05120ac4b3433dc36",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Bastion_SG.aws_security_group.this",
            "module.Bastion_SG.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.Bastion_SG",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3585471571",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05120ac4b3433dc36",
            "security_group_rule_id": "sgr-03afc05ddce013bd7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Bastion_SG.aws_security_group.this",
            "module.Bastion_SG.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}